app/css/app.scss
@import "mapbox-gl/dist/mapbox-gl";

$color_background: #343332;
$color_light: #999;

$font_size: 14px;
$font_size_small: 12px;
$font_size_tiny: 10px;
$font_size_title: 24px;

$line_height: 20px;

$padding_base: $line_height;
$mobile_breakpoint: 520px;

html, body {
	background-color: $color_background;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
	font-weight: 300;
	font-size: $font_size;
	line-height: $line_height;
	height: 100%;
	width: 100%;
	margin: 0;
	overflow: hidden;
	padding: 0;
}

a {
	color: #6969FC;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

b {
	font-weight: 500; 
}

h1, h2, h3, h4, h5, h6 {
	margin: 0;
	font-weight: 300;
}

h2 {
	font-size: $font_size_title;
}

h3 {
	color: $color_light;
	margin-top: $padding_base;
	margin-bottom: $padding_base / 4;
	font-size: $font_size_small;
	font-weight: 500;
	text-transform: uppercase;

	&:first-child {
		margin-top: 0;
	}
}

header {
	margin: 0;
}

footer {
	margin-top: $padding_base * 2;

	&.credits {
		font-size: $font_size_tiny;
	}
}

p {
	margin: 0;

	& + p {
		margin-top: $line_height;
	}
}

#app-container, .drop-zone {
	display: block;
	height: 100%;
	position: relative;
	width: 100%;
}

.drop-zone {

	margin-top: 0;

	-webkit-transition: margin-top 0.25s ease;
	transition: margin-top 0.25s ease;

	&.drop-status {
		$error_size: $line_height + $padding_base * 2;
		margin-top: $error_size;

		@mixin drop-zone-status($bgcolor, $color, $message) {
			background-color: $bgcolor;
			color: $color;
			content: $message;
			display: block;
			font-weight: 500;
			padding: $padding_base 0;
			position: absolute;
			text-align: center;
			top: -$error_size;
			left: 0;
			right: 0;
		}

		&.ready:after {
			@include drop-zone-status(#FFE96C, #333333, "Drop your storyline anywhere…")
		}

		&.processing:after {
			@include drop-zone-status(#19C54D, white, "Processing…")
		}

		&.unsupported-file:after {
			@include drop-zone-status(#D35C5C, white, "Oops, the file you provided doesn't look like a Moves storyline")
		}
	}
}

.icon {
	background-size: 20px 20px;
	background-repeat: no-repeat;
	cursor: pointer;
	display: inline-block;
	height: 20px;
	margin-left: $padding_base;
	overflow: hidden;
	text-decoration: none;
	text-indent: 100%;
	white-space: nowrap;
	width: 20px;
}

.icon-layers {
	background-image: url(inline-image('icon-layers.png'));
}

.icon-layers:hover {
	background-image: url(inline-image('icon-layers-over.png'));
}

.icon-layers.active {
	background-image: url(inline-image('icon-layers-active.png'));
}

.icon-layers.active:hover {
	background-image: url(inline-image('icon-layers-active-over.png'));
}

.icon-minimize {
	background-image: url(inline-image('icon-minimize.png'));
}

.icon-minimize:hover {
	background-image: url(inline-image('icon-minimize-over.png'));
}

.icon-minimize.active {
	background-image: url(inline-image('icon-minimize-active.png'));
}

.icon-minimize.active:hover {
	background-image: url(inline-image('icon-minimize-active-over.png'));
}

.info-panel {
	background-color: white;
	box-sizing: border-box;
	left: $padding_base;
	overflow: hidden;
	max-height: 100%;
	padding: $padding_base;
	position: absolute;
	top: $padding_base;
	width: 400px;
	z-index: 100;

	-webkit-user-select: none;  
  -moz-user-select: none;     
  -ms-user-select: none;      
  user-select: none;

	-webkit-transition: max-height 0.5s ease-in;
	transition: max-height 0.5s ease-in;

  &.minimized {
  	max-height: $line_height + 2 * $padding_base;
  	-webkit-transition-timing-function: ease-out;
  	transition-timing-function: ease-out;
  }

  header {

		padding-bottom: $padding_base;

  	.tools {
  		float: right;
  		display: block;
  		height: 24px;
  	}
  }

	@media (max-width: $mobile_breakpoint) {
		right: $padding_base;
		width: auto;
	}
}

.layer-selector {

	input {
		margin-right: $padding_base / 2;
	}

	label {
		display: block;
		font-size: $font_size;

		& + label {
			margin-top: $padding_base / 4;
		}
	}

	.layer-detail {
		color: $color_light;
		font-size: $font_size_small;
		float: right;
	}
}

